fix scrollbar color and ...

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #1e293b rgba(76, 175, 80, 0);
+  scroll-behavior: smooth;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: none;
+  border-radius: 5px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #1e293b;
+  border-radius: 14px;
+  /* border: 3px solid white; */
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
